Bug 1417995 - Fix compile warning in nsAbOutlookDirectory.cpp. rs=bustage-fix